--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.anas.simpleencryptionapp</groupId>
     <artifactId>SimpleEncryptionApp</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0-DEV</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
